--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <meta property='og:title' content='Madeline Zhang - Personal Portfolio'/>
+    <meta property='og:title' content='Yadnesh Chowkekar - Personal Portfolio'/>
     <meta property='og:image' content='public/img/preview.png'/>
     <meta property='og:description' content='software engineer | lifelong learner | cat enthusiast'/>
     <meta property='og:url' content='https://madelinez820.github.io/'/>
 
-    <title>Madeline Zhang - Software Engineer </title>
+    <title>Yadnesh Chowkekar - Data Analyst</title>
 
     <!-- Bootstrap core CSS -->
     <link href="public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -70,10 +70,10 @@
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
           <br></br>
-          <img class="circularimage" src="public/img/headshot.jpg" alt="madelinezhangheadshot.jpg" height="200">
+          <img class="circularimage" src="public/img/yadnesh_profile_2025_final.png" alt="yadnesh_profile_2025_final.png" height="200">
           <br><br><br>
-          <h1 class="mx-auto my-0 text-uppercase">Madeline Zhang</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">software engineer | lifelong learner | cat enthusiast </h2>
+          <h1 class="mx-auto my-0 text-uppercase">Yadnesh Chowkekar</h1>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">Data Analyst | ML Engineer | Ex SDE </h2>
           <a id="moreButton" href="#about" class="btn btn-primary js-scroll-trigger">More About Me</a>
         </div>
       </div>
@@ -85,7 +85,7 @@
         <br><br>
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-white mb-4">Hey there! I'm Maddy, a software engineer at <a href="https://health.google/">Google</a> and recent <a href="https://www.mit.edu/">MIT</a> grad. </h2>
+            <h2 class="text-white mb-4">Hey there! I'm Yadnesh, a Data Analytics graduate student at <a href="https://graduate.northeastern.edu/programs/mps-analytics/master-of-professional-studies-in-analytics-boston/">Northeastern University</a> </h2>
             <p class="text-white-50"> I'm a SWE in Google Health. I'm interested in building web apps, coding videogames, and teaching / tutoring (both coding and non-coding things!). <br /> <br />
               I have previous experience both in industry as well as in research roles. For example, I've previously interned at Amazon, Microsoft, IBM and Morgan Stanley. Also, I was an undergraduate researcher at MIT D-Lab in the Mobile Technology Group.
               Please see my <a href="https://madelinez820.github.io/madelinezhangresume.pdf">resume</a> (or continue scrolling down here) if you want to learn more about my past positions.
