--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
             </li>
             <li class="nav-item" id="resume-button-li"> 
-              <a id="resume-button" class="js-scroll-trigger" href="https://yadnesh72.github.io/yadnesh.github.io/Yadnesh_CV_Final_version.pdf">Resume</a>
+              <a id="resume-button" class="js-scroll-trigger" href="https://yadnesh72.github.io/yadnesh.github.io/Yadnesh_CV_ats.pdf">Resume</a>
             </li>
           </ul>
         </div>
